<resources>
    <string name="app_name">Society Works</string>
    <string name="local_services">Local Services</string>
    <string name="amenties">Amenties</string>
    <string name="resident_book">Resident Book</string>
    <string name="meetings">Events</string>
    <string name="visitors">Visitors</string>
    <string name="home">Home</string>
    <string name="you_can_directly_pay_by_cash_avoid_paying_by_cash_in_pandemic">You can directly pay by cash.(Avoid paying by cash in pandemic)</string>
    <string name="or">OR</string>
    <string name="society_maintenance_bill_payment">Society Maintenance Bill Payment</string>
    <string name="pay">Pay</string>
    <string name="service_bill_payment">Service Bill Payment</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="select_issue">Select Issue</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_subissue">Select Sub-Issue</string>
    <string name="raise_a_complaint">Raise a Complaint</string>
    <string name="block">Block</string>
    <string name="flat_number">Flat Number</string>
    <string name="submit">Submit</string>
    <string name="date_of_service">Date of Service</string>
    <string name="please_specify">Please Specify</string>
    <string name="contact_number">Contact Number</string>
    <string name="logout" />
    <string name="user_profile">User Profile</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="user">user</string>
    <string name="day_of_service">Day of Service</string>
</resources>
