<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutspinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".localservices">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/backgroundmeeting"
        app:layout_constraintBottom_toTopOf="@+id/spinnertext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spinnertext1"
        android:layout_width="178dp"
        android:layout_height="27dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:fontFamily="@font/antic"
        android:text="@string/select_issue"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner_issue"
        android:layout_width="177dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toTopOf="@+id/spinnertext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertext1" />

    <TextView
        android:id="@+id/spinnertext2"
        android:layout_width="167dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="228dp"
        android:layout_marginRight="228dp"
        android:fontFamily="@font/antic"
        android:text="@string/select_subissue"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_issue" />

    <Spinner
        android:id="@+id/spinner_sub"
        android:layout_width="323dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertext2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/antic"
        android:gravity="center"
        android:text="@string/raise_a_complaint"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spinnertext3"
        android:layout_width="174dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:fontFamily="@font/antic"
        android:text="@string/block"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/spinnertext4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sub" />

    <Spinner
        android:id="@+id/spinner_block"
        android:layout_width="174dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/custom_input"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/spinner_flatnumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertext3" />

    <TextView
        android:id="@+id/spinnertext4"
        android:layout_width="172dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/antic"
        android:text="@string/flat_number"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_flatnumber"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_flatnumber"
        android:layout_width="170dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintStart_toEndOf="@+id/spinner_block" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:fontFamily="@font/antic"
        android:hint="Password"
        android:text="@string/contact_number"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="156dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/antic"
        android:text="@string/please_specify"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="211dp"
        android:layout_height="64dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/spinner_time" />

    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="209dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Spinner
        android:id="@+id/editTextDate"
        android:layout_width="213dp"
        android:layout_height="29dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="date"
        android:text="@string/jan_01_2020"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/antic"
        android:text="Time of Service"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_time" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="149dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/antic"
        android:text="@string/day_of_service"
        android:textColor="@color/Black1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertext3" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="#800000"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
